<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:menuCategory="container">
        <item
            android:id="@+id/menu_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite"
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            app:showAsAction="always" />
    </group>
</menu>
